site-service.yml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  labels:
    app: mysite
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: mysite
